# mtg-inventory

./: .gitignore  Cargo.toml  README.md
src/: database.rs  download.rs  main.rs  scryfall.rs
