[package]
name = "mtg-inventory"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json", "stream"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-macros = "2.4.0"
anyhow = "1.0.86"
curl = "0.4.46"
serde_json = "1.0.127"
uuid = { version = "1.10.0", features=["serde"]}
rusqlite = "0.32.1"
