[package]
name = "mtg-inventory"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.86"
curl = "0.4.46"
serde_json = "1.0.127"
uuid = { version = "1.10.0", features=["serde"]}
rusqlite = "0.32.1"
